MOVE-V3 remove set class, switch to streams for selections; TODO type conversions